[package]
name = "ratex-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ratex-layout = { path = "../vendor/ratex-core/crates/ratex-layout" }
ratex-parser = { path = "../vendor/ratex-core/crates/ratex-parser" }
ratex-svg = { path = "../vendor/ratex-core/crates/ratex-svg", features = ["standalone"] }
ratex-types = { path = "../vendor/ratex-core/crates/ratex-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
